--- a/CV/assets/css/style.css
+++ b/CV/assets/css/style.css
@@ -3,17 +3,17 @@
     font-weight:bold;
 }
 
-#titreexp
+.titreexp
 {
     font-weight:bold;
 }
-
 
 
 .logofooter{
   width:100px;
 }
 
-.table{
+footer{
   background-color: rgb(46, 46, 46);
 }
+
